# tests

./: bg_extract.py  bmp.txt  camera_para.txt  compare_weather.py  cv_imwrite.py  cylinderSimu.py  data_cmd.csv  data_qw.csv  read_bmp.py  read_csv.py  solution.py  tcp_client_recv_image.py  test.txt  test_code.py  test_email.py  test_geohash.py  test_nowapi.py  test_weather_api.py  tf_test.py  tmp.csv  tmp_gps.txt
jpg_compress/: save_jpg.py
socket_test/: CMakeLists.txt  client.cpp  client.py  server.py
test_cpp/: a.cpp  a.s
test_tf/: REST_client.py  classifiar_flowers.py  classifier.py  cnn_test.py  model.config  save_model.py  start_server.sh  test_model.py  weights.h5
test_unet/: myunet.py
